Переместил заполнение View в его модель

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="back">назад</string>
     <string name="refresh">Обновить</string>
     <string name="view_news">Просмотр статьи</string>
+    <string name="offline_title">Нет подключения</string>
+    <string name="offline_message">В данный момент не удаётся установить подключение к серверу</string>
+    <string name="close_button">Закрыть</string>
     <plurals name="hours">
         <item quantity="zero">%1$d часов</item>
         <item quantity="one">%1$d час</item>
